--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   shared_preferences: ^2.2.3
   flutter_card_swiper: 7.0.0
+  fluttertoast: ^8.2.5
 
 
   # The following adds the Cupertino Icons font to your application.
