--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,15 @@ dependencies:
   fluttertoast: ^8.2.5
   google_fonts: ^6.2.1
   flutter_launcher_icons: ^0.13.1
+  intl: ^0.19.0
+#  giphy_picker: ^3.0.2
+  flutter_sound: ^9.4.10
+  firebase_storage: ^11.7.5
+  permission_handler: ^11.3.1
+  path_provider: ^2.1.3
+  path: ^1.9.0
+  audioplayers: ^6.0.0
+  flutter_audio_waveforms: ^1.2.1+8
 
 
   # The following adds the Cupertino Icons font to your application.
