--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,12 +37,13 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   intl: ^0.19.0
 #  giphy_picker: ^3.0.2
-  flutter_sound: ^9.4.10
+  flutter_sound: ^9.8.1
   firebase_storage: ^11.7.5
   permission_handler: ^11.3.1
   path_provider: ^2.1.3
   path: ^1.9.0
   audioplayers: ^6.0.0
+  image_picker: ^1.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
